# Mash-installer

./: .gitignore  .gitignore.md  CLAUDE.md  Cargo.toml  Dockerfile  PRODUCTION_CHECKLIST.md  README.md  bootstrap.sh  install.sh  release.toml  tarpaulin.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  pylint.yml  python-package.yml  release.yml
docs/: ARCH.md  HISTORY.md  MANUAL.md  MINING_GOVERNANCE.md  QAREPORT.md  QA_SUMMARY.md  REPORT.md  SOFTWARE_GRIMOIRE.md  book.toml  improvement-plans.md  modules.md
docs/QA/: Block-1-findings.md  Block-2-findings.md  Block-3-findings.md  Block-4-findings.md  PlanA.md  PlanB.md
docs/WO/: WO-001-refactor-installcontext.md  WO-002-introduce-formal-phase-trait.md  WO-003-decouple-ui-from-core-logic.md  WO-004-create-flexible-phase-runner.md  WO-005-enhance-error-handling-and-reporting.md  WO-006-implement-comprehensive-test-suite.md  WO-007-centralize-configuration-management.md  WO-008-abstract-system-operations.md  WO-009-externalize-ui-strings.md  WO-010-improve-library-api-design.md  WO-011-robust-external-command-error-reporting.md  WO-012-enhance-doctor-preflight-validation.md  WO-013-ensure-idempotency-key-operations.md  WO-014-implement-transactional-rollback.md  (+5 more)
docs/scratch/: shaftk.md
installer-arch/: Cargo.toml
installer-cli/: Cargo.toml
installer-core/: Cargo.toml
installer-debian/: Cargo.toml
installer-fedora/: Cargo.toml
mcp-server/: Cargo.toml
mcp-server/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs
mcp-server/tests/: webhook_test.rs
scripts/: auto_bump.py  auto_bump.rs  fix_ci_issues.sh
src/: apt.rs  argon.rs  buildroot.rs  config.rs  docker.rs  doctor.rs  fonts.rs  github.rs  main.rs  platform.rs  rclone.rs  rust.rs  staging.rs  zsh.rs
wallpaper-downloader/: Cargo.toml
(+160 files in other folders)
