[package]
name = "mash-setup"
version = "0.1.0"
edition = "2021"
description = "Mash Installer – idempotent mega-installer for Raspberry Pi / Ubuntu dev machines"
license = "MIT"
repository = "https://github.com/drtweak86/Mash-installer-"
default-run = "mash-setup"

[[bin]]
name = "mash-setup"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
nix = { version = "0.29", features = ["fs"] }
which = "7"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
