[workspace]
resolver = "2"
members = [
  "installer-cli",
  "installer-core",
  "installer-arch",
  "installer-fedora",
  "installer-debian",
  "wallpaper-downloader",
  "xtask",
]

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"

[profile.dev]
opt-level = 1      # Snappier debug binaries for TUI testing
incremental = true # Fast rebuilds

# Keep dependencies fast even in debug mode
[profile.dev.package."*"]
opt-level = 3
