[package]
name = "mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive", "env"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
